build: Include ell/main-private.h when using internal ELL

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,6 +42,7 @@ ell_sources = ell/private.h \
 			ell/utf8.c \
 			ell/queue.c \
 			ell/timeout.c \
+			ell/main-private.h \
 			ell/main.c \
 			ell/idle.c \
 			ell/signal.c \
